package PaooGame.Items;

public class Breakable {
}
